--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,59 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>DeadOrAlive</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
 
-<%= yield %>
+    <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+    More info: h5bp.com/b/378 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-</body>
+    <title>Bada Bang</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Mobile viewport optimized: j.mp/bplateviewport -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+
+  </head>
+
+  <body>
+    <header>
+      <%= image_tag "logo.png", :id =>"logo" %>
+      <h1><span>Bada Bang</span></h1>
+
+      <span class="user-box">
+        <%- if user_signed_in? %>
+          <%= "Signed in as #{current_user.nickname}. Not you?" %>
+          <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+        <%- else %>
+          <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+        <%- end %>
+      </span>
+    </header>
+
+    <div role="main" id="main">
+      <div id="messages">
+        <%- unless notice.nil? %>
+          <p class="notice"><%= notice %></p>
+        <%- end %>
+        <%- unless alert.nil? %>
+          <p class="alert"><%= alert %></p>
+        <%- end %>
+      </div>
+
+      <div id="content">
+        <%= yield %>
+      </div>
+    </div>
+
+    <footer>
+
+    </footer>
+  </body>
 </html>
